fix duplicate key

--- a/locales/tr.yml
+++ b/locales/tr.yml
@@ -1,5 +1,4 @@
-extensionName: "ChatGPT Konuşmayı indir"
-extensionName: "ChatGPT Sohbet Dışa Aktarma"
+extensionName: "ChatGPT Konuşmayı İndir"
 extensionDescription: "ChatGPT sohbetlerinizi metin dosyası olarak dışa aktarın"
 
 content:
